--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <img class="logo" src="../assets/simple.png">
     <li><a [routerLink]="['Home']" > Inicio</a> </li>
     <li><a [routerLink]="['Sobre']"> Sobre</a> </li>
-    <li><a [routerLink]="['Teste']"> Teste</a> </li>
+    <li><a [routerLink]="['teste']"> Teste</a> </li>
   </ul>
 </nav>
 <body>
