--- a/src/app/Page/teste/teste.component.html
+++ b/src/app/Page/teste/teste.component.html
@@ -1,1 +1,9 @@
 <p>teste works!</p>
+
+<div ngIf="clima">
+    <h2>Clima em {{ city }}</h2>
+    <p>Temperatura: {{ weatherData.main.temp }}°C</p>
+    <p>Descrição: {{ weatherData.weather[0].description }}</p>
+  </div>
+  
+  
