--- a/src/app/Page/teste/teste.component.scss
+++ b/src/app/Page/teste/teste.component.scss
@@ -7,7 +7,7 @@
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
-    background-color: rgb(42, 53, 53); 
+    background-color:  rgb(59, 18, 243); 
   }
   
   .card-icon {
@@ -18,6 +18,7 @@
   
   .card-content {
     flex: 1;
+    color: #ccc;
   }
   
   .card-content h2 {
