Ajuste de base e configuração de navegação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <nav>
   <ul class="menu">
-    <img class="logo" src="../assets/simple.png">
-    <li><a [routerLink]="['Home']" > Inicio</a> </li>
-    <li><a [routerLink]="['Sobre']"> Sobre</a> </li>
-    <li><a [routerLink]="['teste']"> Teste</a> </li>
+    <img class="logo" src="../assets/LOGO.png">
+    <li><a [routerLink]="['Home']" > INICIO</a> </li>
+    <li><a [routerLink]="['Sobre']"> SOBRE</a> </li>
   </ul>
 </nav>
 <body>
