Finalização do projeto:
- Adicionado footer responsivo com imagem de logo e botões para links externos.
- Implementado layout responsivo para garantir uma experiência consistente em diferentes dispositivos.
- Corrigidos bugs menores e realizadas melhorias gerais na interface do usuário.

Este commit marca a conclusão do desenvolvimento do projeto. Todos os requisitos foram atendidos e o código foi revisado para garantir qualidade e consistência. Pronto para lançamento.

--- a/src/app/Page/home/home.component.html
+++ b/src/app/Page/home/home.component.html
@@ -1,3 +1,8 @@
+<div class="Busca">
+  <input type="text" [(ngModel)]="city" placeholder="Digite o nome da cidade">
+  <button (click)="getWeather()">Pesquisar</button>
+</div>
+
 <h1 class="container"> Clima em {{weatherData.name}}</h1>
 
 <div class="container">
