--- a/src/app/Page/sobre/sobre.component.html
+++ b/src/app/Page/sobre/sobre.component.html
@@ -1,14 +1,23 @@
-<P>Este projeto em Angular utiliza a API OpenWeatherMap para fornecer informações meteorológicas em tempo real. A aplicação é composta por uma interface de usuário amigável que exibe dados como temperatura, descrição do clima, umidade do ar e coordenadas geográficas de uma localização específica. Os usuários podem pesquisar por diferentes cidades para obter informações meteorológicas atualizadas.</P>
+<P>Este projeto em Angular utiliza a API OpenWeatherMap para fornecer informações meteorológicas em tempo real. A
+    aplicação é composta por uma interface de usuário amigável que exibe dados como temperatura, descrição do clima,
+    umidade do ar e coordenadas geográficas de uma localização específica. Os usuários podem pesquisar por diferentes
+    cidades para obter informações meteorológicas atualizadas.</P>
 
 <P>
-    O projeto utiliza o framework Angular para criar uma aplicação web responsiva e interativa. Ele faz uso de serviços e componentes para consumir os dados da API OpenWeatherMap e exibi-los de forma dinâmica na interface do usuário.
+    O projeto utiliza o framework Angular para criar uma aplicação web responsiva e interativa. Ele faz uso de serviços
+    e componentes para consumir os dados da API OpenWeatherMap e exibi-los de forma dinâmica na interface do usuário.
 </P>
 
 <P>
-        
-    Os principais aspectos técnicos incluem o uso de módulos para organizar o código, roteamento para navegação entre diferentes páginas da aplicação e integração com APIs externas por meio de requisições HTTP. O projeto segue as melhores práticas de desenvolvimento Angular, como separação de preocupações, injeção de dependências e utilização de observables para lidar com fluxos de dados assíncronos.
+
+    Os principais aspectos técnicos incluem o uso de módulos para organizar o código, roteamento para navegação entre
+    diferentes páginas da aplicação e integração com APIs externas por meio de requisições HTTP. O projeto segue as
+    melhores práticas de desenvolvimento Angular, como separação de preocupações, injeção de dependências e utilização
+    de observables para lidar com fluxos de dados assíncronos.
 </P>
 
 <P>
-    Em resumo, este projeto em Angular com a API OpenWeatherMap oferece uma solução eficaz e fácil de usar para obter informações meteorológicas em tempo real, proporcionando uma experiência positiva aos usuários interessados em acompanhar as condições climáticas de diferentes regiões.
+    Em resumo, este projeto em Angular com a API OpenWeatherMap oferece uma solução eficaz e fácil de usar para obter
+    informações meteorológicas em tempo real, proporcionando uma experiência positiva aos usuários interessados em
+    acompanhar as condições climáticas de diferentes regiões.
 </P>
