--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,16 @@
 </nav>
 <body>
 </body>
+
+<footer>
+  <div class="footer-content">
+    <img src="../assets/LOGO.png" alt="Logo">
+    <div class="button-container">
+      <a href="https://github.com/jcpnascimento" target="_blank"><button> GITHUB </button></a>
+      <a href="https://www.linkedin.com/in/jacksoncarlos/" target="_blank"><button>linkedin</button></a>
+      <a href="https://www.instagram.com/jacksoncarloss/" target="_blank"><button>instagram</button></a>
+    </div>
+  </div>
+</footer>
+
 <router-outlet></router-outlet>
