--- a/src/app/Page/home/home.component.scss
+++ b/src/app/Page/home/home.component.scss
@@ -35,3 +35,28 @@
     margin-bottom: 0;
   }
   
+  .Busca {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .Busca input {
+    border-radius: 10px;
+    padding: 5px;
+    margin-right: 10px;
+  }
+  
+  .Busca button {
+    padding: 5px 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .Busca button:hover {
+    background-color: #45a049;
+  }
+  
